fix(reassurance)fix width 100% on mobile

--- a/app/scss/partials/sections/_reassurance.scss
+++ b/app/scss/partials/sections/_reassurance.scss
@@ -30,12 +30,12 @@
     justify-content: center;
     padding: 0 15px;
     &--orange {
-      @include box($reassuranceOrange, 100%, 375px);
+      @include box($reassuranceOrange, auto, 375px);
       margin-bottom: 40px;
       color: white;
     }
     &--yellow {
-      @include box($reassuranceYellow, 100%, 375px);
+      @include box($reassuranceYellow, auto, 375px);
       margin-bottom: 40px;
       @include bp('desktop') {
         margin-right: 40px;
